<resources>
    <string name="app_name">420-PC2-SH</string>
    <string name="TitreAjoutUtilisateur">Ajout d\'utilisateur</string>
    <string name="courriel">Courriel</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>